--- a/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj
+++ b/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj
@@ -144,6 +144,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ghost.h" />
+    <ClInclude Include="main_iocp.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="protocol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
