--- a/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj.filters
+++ b/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Ghost.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="main_iocp.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
