--- a/spookyhouse_client/spookyhouse_client/spookyhouse_client.vcxproj
+++ b/spookyhouse_client/spookyhouse_client/spookyhouse_client.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="client.h" />
     <ClInclude Include="protocol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
