--- a/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj.filters
+++ b/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Ghost.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="multithread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="protocol.h">
