--- a/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj
+++ b/Spookyhouse_Server2/Spookyhouse_Server2/Spookyhouse_Server2.vcxproj
@@ -140,7 +140,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ghost.cpp" />
-    <ClCompile Include="iocp.cpp" />
+    <ClCompile Include="iocp.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="multithread.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ghost.h" />
